--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -136,6 +136,25 @@ form {
   }
 }
 
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px auto;
+
+  button {
+    background-color: transparent;
+    border: 2px solid #262626;
+    color: #fff;
+    padding: 8px 15px;
+    border-radius: 10px;
+  }
+  span {
+    color: #fff;
+  }
+}
+
 @media (max-width: 992px) {
   .grid-and-categories .grid {
     grid-template-columns: repeat(2, 1fr);
