--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-products></app-products>
+<!-- <app-individual-product></app-individual-product> -->
+<!-- <app-products></app-products> -->
 <router-outlet />
