--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,10 +14,10 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link px-4" href="#">Home</a>
+            <a class="nav-link px-4" routerLink="/products">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-4" href="#">Products</a>
+            <a class="nav-link px-4" routerLink="/products">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link px-4" href="#">About</a>
@@ -48,3 +48,4 @@
     </div>
   </nav>
 </header>
+<router-outlet />
