--- a/src/app/individual-product/individual-product.component.css
+++ b/src/app/individual-product/individual-product.component.css
@@ -1,6 +1,5 @@
-@import url("../products.component.css");
-
 .container-fluid {
+  background-color: #141414;
   height: 90vh;
   display: flex;
   justify-content: center;
@@ -31,6 +30,7 @@
     .title {
       /* color: #fff; */
     }
+
     .product-category {
       border: 1px solid #262626;
       padding: 15px;
