Fixed ngrx implementation for Products component
Added ngrx implementation for Single Product component

Added click event on photos in Single Product component

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,84 +1,3 @@
-<!-- <div class="container-fluid py-5">
-  <div class="container">
-    <form class="pb-4">
-      <div class="search">
-        <input
-          type="text"
-          name="seacrh"
-          placeholder="Search..."
-          [(ngModel)]="listFilter"
-        />
-        <a class="search-button">
-          <i class="bi bi-search"></i>
-        </a>
-      </div>
-    </form>
-    <div class="grid-and-categories">
-      <div class="grid">
-        <div class="card p-4" *ngFor="let product of filteredProducts">
-          <img
-            class="card-img-top"
-            [src]="product.thumbnail"
-            [alt]="product.title"
-          />
-          <div class="card-body p-0 pt-5">
-            <h5 class="card-title">{{ product.title }}</h5>
-            <p class="card-text mb-5">
-              {{ product.description.split(" ").slice(0, 4).join(" ") }}
-              <a [routerLink]="['/products', product.id]">Read More</a>
-            </p>
-            <a href="" class="product-category">
-              {{ product.category | capitalize }}
-            </a>
-            <div class="product-price-and-button mt-5">
-              <div class="price">
-                <p>Price</p>
-                <p>{{ product.price | currency }}</p>
-              </div>
-              <a href="#" class="btn btn-primary px-4">Add To Cart</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="categories">
-        <div class="heading">
-          <i class="bi bi-ui-checks-grid"></i>
-          <h5>Categories:</h5>
-        </div>
-        <ul>
-          <li class="active">
-            <a href="">All</a>
-          </li>
-          <li
-            *ngFor="let categorie of productCategories"
-            [ngClass]="{ active: activeCategory === categorie }"
-            (click)="setActiveCategory(categorie)"
-          >
-            <a>{{ categorie | capitalize }}</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="pagination">
-      <button
-        [disabled]="currentPage === 1"
-        (click)="onPageChange(currentPage - 1)"
-      >
-        Previous
-      </button>
-
-      <span>Page {{ currentPage }} of {{ totalPages }}</span>
-
-      <button
-        [disabled]="currentPage === totalPages"
-        (click)="onPageChange(currentPage + 1)"
-      >
-        Next
-      </button>
-    </div>
-  </div>
-</div>
-<router-outlet /> -->
 <div class="container-fluid py-5">
   <div class="container">
     <form class="pb-4">
@@ -88,7 +7,7 @@
           name="search"
           placeholder="Search..."
           [(ngModel)]="listFilter"
-          (ngModelChange)="filterProducts()"
+          (ngModelChange)="filterProductsBySearch()"
         />
         <a class="search-button">
           <i class="bi bi-search"></i>
@@ -129,8 +48,8 @@
           <h5>Categories:</h5>
         </div>
         <ul>
-          <li class="active">
-            <a href="" (click)="setActiveCategory('')">All</a>
+          <li class="active" (click)="setActiveCategory('')">
+            <a href="">All</a>
           </li>
           <li
             *ngFor="let category of categories$ | async"
