--- a/src/app/individual-product/individual-product.component.css
+++ b/src/app/individual-product/individual-product.component.css
@@ -7,18 +7,24 @@
 
   .container {
     .left {
+      .row {
+        display: flex;
+        align-items: center;
+      }
+
       img {
         border-radius: 15px;
         border: 2px solid #262626;
+        cursor: pointer;
       }
       .main-image-holder {
-        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         img {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
+          max-width: 300px;
+          cursor: auto;
         }
       }
     }
@@ -26,10 +32,6 @@
 
   .right {
     color: #fff;
-
-    .title {
-      /* color: #fff; */
-    }
 
     .product-category {
       border: 1px solid #262626;
