--- a/src/app/individual-product/individual-product.component.html
+++ b/src/app/individual-product/individual-product.component.html
@@ -5,19 +5,20 @@
         <div class="row">
           <div class="col-3">
             <div class="grid">
-              <div class="grid-item">
-                <img [src]="product.images[0]" [alt]="product.title" />
-              </div>
-              <div class="grid-item">
-                <img [src]="product.images[1]" [alt]="product.title" />
-              </div>
-              <div class="grid-item">
-                <img [src]="product.images[2]" [alt]="product.title" />
+              <div
+                class="grid-item"
+                *ngFor="let image of product.images; let i = index"
+              >
+                <img
+                  [src]="image"
+                  [alt]="product.title + 'image ' + (i + 1)"
+                  (click)="changeImage(image)"
+                />
               </div>
             </div>
           </div>
           <div class="col-9 main-image-holder">
-            <img [src]="product.thumbnail" [alt]="product.title" />
+            <img [src]="currentimage" [alt]="product.title" />
           </div>
         </div>
       </div>
