Added no-data component
Added coming soon page

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -15,7 +15,9 @@
       </div>
     </form>
     <div class="grid-and-categories">
-      <div class="grid">
+      <app-no-data *ngIf="filteredProducts.length === 0"></app-no-data>
+
+      <div class="grid" *ngIf="filteredProducts.length > 0">
         <div class="card p-4" *ngFor="let product of filteredProducts">
           <img
             class="card-img-top"
