--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
             <a class="nav-link px-4" routerLink="/products">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-4" href="#">About</a>
+            <a class="nav-link px-4" routerLink="/about">About</a>
           </li>
         </ul>
       </div>
