--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -37,6 +37,11 @@ form {
   display: flex;
   gap: 20px;
   align-items: flex-start;
+  justify-content: center;
+
+  app-no-data {
+    width: 70%;
+  }
 
   .grid {
     display: grid;
@@ -96,6 +101,7 @@ form {
 
   .categories-and-price-range {
     width: 25%;
+    margin-left: auto;
     .categories {
       border: 2px solid #262626;
       border-radius: 10px;
