Added loading spinner for isLoading state for products, categories and single-product
Added a server-error component which is displayed when we get server error for products, categories and single-product

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,6 +3,9 @@ header {
 }
 nav {
   background-color: #141414 !important;
+  background-image: url("../../../public/lines.svg");
+  background-position: center;
+  background-size: cover;
 
   .logo {
     font-size: 30px;
