--- a/src/app/no-data/no-data.component.html
+++ b/src/app/no-data/no-data.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="container">
-    <div class="heading text-danger">
+    <div class="heading text-light">
       <h2>We are sorry</h2>
       <i class="bi bi-emoji-frown"></i>
     </div>
