--- a/src/app/individual-product/individual-product.component.css
+++ b/src/app/individual-product/individual-product.component.css
@@ -5,6 +5,17 @@
   justify-content: center;
   align-items: center;
 
+  /* Loading spinner */
+  .spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .spinner-border {
+      height: 100px;
+      width: 100px;
+    }
+  }
+
   .container {
     .left {
       .row {
