--- a/src/app/individual-product/individual-product.component.html
+++ b/src/app/individual-product/individual-product.component.html
@@ -1,5 +1,14 @@
 <div class="container-fluid">
-  <div class="container">
+  <div class="spinner-container" *ngIf="isLoading$ | async">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+  <app-server-error
+    *ngIf="error$ | async as errorMessage"
+    [errorMessage]="errorMessage"
+  ></app-server-error>
+  <div class="container" *ngIf="!(isLoading$ | async) && !(error$ | async)">
     <div class="row">
       <div class="left col">
         <div class="row">
