Finished responsive design on all pages and components

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand logo" href="#"> Angular Shop </a>
       <button
@@ -29,13 +29,13 @@
           <li class="nav-item mx-2">
             <a href="" class="nav-link">
               <i class="bi bi-box-arrow-in-right"></i>
-              Login
+              <span>Login</span>
             </a>
           </li>
           <li class="nav-item mx-2">
             <a href="" class="nav-link">
               <i class="bi bi-person-add"></i>
-              Sign Up
+              <span>Sign Up</span>
             </a>
           </li>
           <li class="nav-item mx-2">
@@ -48,4 +48,5 @@
     </div>
   </nav>
 </header>
+
 <router-outlet />
