--- a/src/app/individual-product/individual-product.component.css
+++ b/src/app/individual-product/individual-product.component.css
@@ -1,6 +1,8 @@
 .container-fluid {
   background-color: #141414;
-  height: 90vh;
+  /* height: 90vh; */
+  padding-top: 150px;
+  padding-bottom: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,6 +60,7 @@
       font-size: 20px;
       font-weight: 500;
       margin: 80px 0;
+      text-align: justify;
     }
     .product-price-and-button {
       display: flex;
@@ -90,6 +93,30 @@
   .grid-item {
     img {
       width: 100%;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .container-fluid {
+    padding: 50px 0;
+    .container {
+      .left {
+        padding: 20px 100px;
+        .main-image-holder {
+          justify-content: end;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container-fluid {
+    .container {
+      .left {
+        padding: 20px 20px;
+      }
     }
   }
 }
