--- a/src/app/individual-product/individual-product.component.html
+++ b/src/app/individual-product/individual-product.component.html
@@ -10,7 +10,7 @@
   ></app-server-error>
   <div class="container" *ngIf="!(isLoading$ | async) && !(error$ | async)">
     <div class="row">
-      <div class="left col">
+      <div class="left col-lg-6 col-md-12">
         <div class="row">
           <div class="col-3">
             <div class="grid">
@@ -31,7 +31,7 @@
           </div>
         </div>
       </div>
-      <div class="right col">
+      <div class="right col-lg-6 col-md-12">
         <div class="product-details">
           <h1 class="title mb-5">{{ product.title }}</h1>
           <a href="" class="product-category mb-5">
