--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -233,8 +233,21 @@ form {
 }
 
 @media (max-width: 992px) {
-  .grid-and-categories .grid {
-    grid-template-columns: repeat(2, 1fr);
+  form {
+    width: 100%;
+  }
+  .grid-and-categories {
+    flex-direction: column-reverse;
+
+    .grid {
+      grid-template-columns: repeat(2, 1fr);
+      width: 100%;
+    }
+
+    .categories-and-price-range {
+      width: 100%;
+      margin-left: 0;
+    }
   }
 }
 
