--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -61,7 +61,7 @@
                 <p>Price</p>
                 <p>{{ product.price | currency }}</p>
               </div>
-              <a href="#" class="btn btn-primary px-4" (click)="addToCart()"
+              <a class="btn btn-primary px-4" (click)="addToCart(product)"
                 >Add To Cart</a
               >
             </div>
