--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,6 +1,6 @@
 .container-fluid {
   background-color: #141414;
-
+  height: 95vh;
   padding-top: 150px;
   padding-bottom: 150px;
   display: flex;
