Added remove product from cart functionality
Fixed the notify icon on cart section in the products page

--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -22,6 +22,17 @@
   }
 }
 
+td {
+  .product {
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 80px;
+    }
+  }
+}
+
 .remove-product {
   color: #fff;
   text-decoration: none;
