--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -16,7 +16,7 @@
         </div>
       </form>
       <div class="cart">
-        <i class="bi bi-dot notify-icon" *ngIf="showNotifyIcon"></i>
+        <div class="notify-icon" *ngIf="showNotifyIcon"><span>1</span></div>
         <h5>Your cart:</h5>
         <a routerLink="/cart">
           <i class="bi bi-cart cart-icon"></i>
