--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -14,10 +14,17 @@
       </thead>
       <tbody>
         <tr *ngFor="let product of cartProducts$ | async">
-          <th scope="row">
-            <a class="remove-product"> X </a>
-          </th>
-          <td>{{ product.title }}</td>
+          <td scope="row">
+            <a class="remove-product" (click)="removeProduct(product.id)">
+              X
+            </a>
+          </td>
+          <td>
+            <div class="product">
+              <img [src]="product.thumbnail" />
+              {{ product.title }}
+            </div>
+          </td>
           <td>{{ product.price | currency }}</td>
           <td>
             <div class="quantity">
