Added the add to cart functionality on single product page
Fixed the isssue of duplicated entries of the same products in the cart

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -61,8 +61,11 @@
                 <p>Price</p>
                 <p>{{ product.price | currency }}</p>
               </div>
-              <a class="btn btn-primary px-4" (click)="addToCart(product)"
-                >Add To Cart</a
+              <a
+                class="btn btn-primary px-4"
+                (click)="!product.isAddedToCart && addToCart(product)"
+                [ngClass]="{ 'btn-disabled': product.isAddedToCart }"
+                >{{ product.isAddedToCart ? "Added" : "Add To Cart" }}</a
               >
             </div>
           </div>
