--- a/src/app/individual-product/individual-product.component.html
+++ b/src/app/individual-product/individual-product.component.html
@@ -48,7 +48,12 @@
               </p>
               <p></p>
             </div>
-            <a href="#" class="btn btn-primary px-4">Add To Cart</a>
+            <a
+              href="#"
+              class="btn btn-primary px-4"
+              (click)="addToCart(product)"
+              >Add To Cart</a
+            >
           </div>
         </div>
       </div>
