--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -269,6 +269,12 @@ form {
   }
 }
 
+.btn-disabled {
+  pointer-events: none;
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
 @media (max-width: 992px) {
   form {
     width: 100%;
