Fixed the issue with duplicating products in the cart, clean way

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -64,8 +64,7 @@
               <a
                 class="btn btn-primary px-4"
                 (click)="!product.isAddedToCart && addToCart(product)"
-                [ngClass]="{ 'btn-disabled': product.isAddedToCart }"
-                >{{ product.isAddedToCart ? "Added" : "Add To Cart" }}</a
+                >Add to cart</a
               >
             </div>
           </div>
