--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,13 +27,13 @@
       <div class="navbar-icons">
         <ul class="navbar-nav">
           <li class="nav-item mx-2">
-            <a href="" class="nav-link">
+            <a class="nav-link" routerLink="/login">
               <i class="bi bi-box-arrow-in-right"></i>
               <span>Login</span>
             </a>
           </li>
           <li class="nav-item mx-2">
-            <a href="" class="nav-link">
+            <a class="nav-link" routerLink="/register">
               <i class="bi bi-person-add"></i>
               <span>Sign Up</span>
             </a>
