--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,42 +2,72 @@
   <div class="container">
     <h1 class="title text-light text-center mb-5">User Register</h1>
 
-    <form (ngSubmit)="registerUser(email.value, password.value, role.value)">
+    <form [formGroup]="registerForm" (ngSubmit)="registerUser()">
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label text-light"
-          >Email address</label
-        >
+        <label for="email" class="form-label text-light">Email address</label>
         <input
-          #email
+          id="email"
           type="email"
           class="form-control text-light"
-          aria-describedby="emailHelp"
+          formControlName="email"
         />
+        <div
+          *ngIf="
+            registerForm.get('email')?.invalid &&
+            registerForm.get('email')?.touched
+          "
+          class="text-danger"
+        >
+          <p *ngIf="registerForm.get('email')?.errors?.['required']">
+            Email is required.
+          </p>
+          <p *ngIf="registerForm.get('email')?.errors?.['email']">
+            Email must be in valid format.
+          </p>
+        </div>
       </div>
       <div class="mb-3 text-light">
-        <label for="exampleInputPassword1" class="form-label text-light">
-          Password
-        </label>
-        <input #password type="password" class="form-control text-light" />
+        <label for="password" class="form-label text-light">Password</label>
+        <input
+          id="password"
+          type="password"
+          class="form-control text-light"
+          formControlName="password"
+        />
+        <div
+          *ngIf="
+            registerForm.get('password')?.invalid &&
+            registerForm.get('password')?.touched
+          "
+          class="text-danger"
+        >
+          <p *ngIf="registerForm.get('password')?.errors?.['required']">
+            Password is required.
+          </p>
+          <p *ngIf="registerForm.get('password')?.errors?.['minlength']">
+            Password must have at least 8 characters.
+          </p>
+        </div>
       </div>
       <div class="mb-3">
         <label for="role" class="from-label text-light">Role</label>
         <select
-          #role
           id="role"
           class="form-select form-select-lg mb-3"
-          aria-label="Large select example"
+          formControlName="role"
         >
           <option value="1">Default</option>
           <option value="2">Admin</option>
         </select>
       </div>
 
-      <div class="errors">
-        <p *ngFor="let error of validationErrors">{{ error }}</p>
-      </div>
-
-      <button type="submit" class="btn btn-primary">Register</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="registerForm.invalid"
+      >
+        Register
+      </button>
     </form>
   </div>
 </div>
