--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <!-- <app-individual-product></app-individual-product> -->
 <!-- <app-products></app-products> -->
+
+<!-- test -->
 <router-outlet />
