--- a/src/app/individual-product/individual-product.component.css
+++ b/src/app/individual-product/individual-product.component.css
@@ -1,6 +1,6 @@
 .container-fluid {
   background-color: #141414;
-  /* height: 90vh; */
+  height: 100vh;
   padding-top: 150px;
   padding-bottom: 150px;
   display: flex;
