--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -5,7 +5,7 @@
 }
 .container-fluid {
   background-color: #141414;
-  height: 90vh;
+  height: calc(100vh - 73px);
   display: flex;
   justify-content: center;
   align-items: center;
