--- a/src/app/individual-product/individual-product.component.css
+++ b/src/app/individual-product/individual-product.component.css
@@ -1,6 +1,6 @@
 .container-fluid {
   background-color: #141414;
-  height: 100vh;
+  height: calc(100vh - 73px);
   padding-top: 150px;
   padding-bottom: 150px;
   display: flex;
@@ -99,6 +99,7 @@
 
 @media (max-width: 992px) {
   .container-fluid {
+    height: auto;
     padding: 50px 0;
     .container {
       .left {
